k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube-admin
  labels:
    name: sonarqube-admin
